fixed alignment of signin and signup pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,11 @@
    margin-top: 10px;
    
  }
+ 
+ .signin-form,
+ .signup-form{
+  padding-left: 0px;
+ }
 
  .footer{
    margin-top: 0px;
